c4prj2_input/grade.txt
Grading at Sat Aug  3 16:28:42 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘read_input’:
input.c:57:9: error: unused variable ‘n’ [-Werror=unused-variable]
  size_t n = n_hand;
         ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
